trunk/Archive2/a4/9f96cc87377e55/output
clang version 3.5.0 (tags/RELEASE_350/final 217394)
Target: x86_64-unknown-linux-gnu
Thread model: posix
main.cpp:5:20: error: expected a qualified name after 'typename'
template <typename T t>
                   ^
main.cpp:8:20: error: expected a qualified name after 'typename'
template <typename E e>
                   ^
2 errors generated.
g++ (GCC) 4.9.0
Copyright (C) 2014 Free Software Foundation, Inc.
This is free software; see the source for copying conditions.  There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

main.cpp:5:20: error: expected nested-name-specifier before 'T'
 template <typename T t>
                    ^
main.cpp:5:22: error: expected '>' before 't'
 template <typename T t>
                      ^
main.cpp:8:20: error: expected nested-name-specifier before 'E'
 template <typename E e>
                    ^
main.cpp:8:22: error: expected '>' before 'e'
 template <typename E e>
                      ^
